<resources>
    <string name="app_name">AtLAS</string>
    <string name="title_history">Deliveries</string>
    <string name="title_map">Map</string>
    <string name="title_friends">Friends</string>
    <string name="title_add_friends">Add Friends</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to log in / sign up -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_first_name">First Name</string>
    <string name="prompt_last_name">Last Name</string>

    <string name="action_sign_in">Sign in</string>
    <string name="action_start_sign_up"><u>Don\'t have an account? Sign up</u></string>
    <string name="action_finish_sign_up">Sign Up</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_sign_up">AtLAS Sign Up</string>
    <string name="profile_button">Click to view/edit profile</string>
    <string name="title_activity_add_friend">AddFriendActivity</string>
    <string name="add_friends">Add Friends</string>
</resources>
